2011-04-13  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: mkvmerge was dropping the last full DTS
	packet from a DTS files if that file was not encoded in "14-in-16"
	mode and if the file size was not divisible by 16.

2011-03-23  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed huge slowdown when splitting by size is
	active with certain kinds of input files. Fix for bug 611.

	* mkvinfo: bug fix: Fixed redirecting the output into a file with
	"--redirect-output"/"-r" and verbosity levels of 2 and higher.

	* mkvpropedit, mmg header/chapter editor: bug fix: Fixed parsing
	Matroska files if mkvtoolnix is compiled with newer versions of
	libebml/libmatroska (SVN revisions after the releases of libebml
	1.2.0/libmatroska 1.1.0).

2011-03-14  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: WAV files with unsupported format tags are
	rejected instead of being treated like containing PCM. Fix for bug
	610.

2011-03-13  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: The EBML header values "doc type version"
	and "doc type read version" are both set to 3 if at least one of
	the video tracks uses the stereo mode parameter.

2011-03-09  Moritz Bunkus  <moritz@bunkus.org>

	* Released v4.6.0.

2011-03-08  Moritz Bunkus  <moritz@bunkus.org>

	* build system: Fixed building the Qt version of mkvinfo's
	GUI (again). Fix for bug 576.

2011-02-17  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: bug fix: If the header editor finds 'language' elements
	with ISO-639-1 codes (e.g. "fra" instead of "fre" for "French")
	then it will map the code to the corresponding ISO-639-2 code. Fix
	for bug 598.

	* mmg: bug fix: Fixed one of the issues causing mmg to report that
	it is configured to use an unsupported version of mkvmerge when
	the reported version was actually empty.

	* mkvmerge: enhancement: HD-DVD subtitles are recognized as being
	an unsupported file format. This makes the error message presented